src/django_smartbase_admin/static/sb_admin/src/css/_base.css
@import "_colors.css";

@layer base {
    html {
        scroll-behavior: smooth;
    }

    body {
        @apply font-body text-dark bg-bg;
    }

    svg {
        @apply fill-current inline-flex;
    }

    label[for] {
        cursor: pointer;
    }

    hr {
        @apply border-dark-200;
    }

    small {
        @apply text-12;
    }

    a {
        cursor: pointer;
        @apply transition-colors;

        &[href]:hover {
            @apply text-primary;
        }

        &.link {
            @apply text-primary;
        }

        &[aria-disabled="true"] {
            pointer-events: none;
            cursor: not-allowed;
        }
    }

    select {
        @apply appearance-none;
        @apply cursor-pointer;
    }

    button {
        &:disabled {
            @apply pointer-events-none;
        }
    }

    input[type="submit"] {
        @apply cursor-pointer;
    }

    /* this class is used to calculate width of scrollbar for different browsers */
    .scrollbar-measure {
        width: 100px;
        height: 100px;
        overflow: scroll;
        position: absolute;
        top: -9999px;
    }

    .custom-scrollbar {
        &::-webkit-scrollbar {
            width: 10px;
            height: 10px;
        }

        &::-webkit-scrollbar-track {
            @apply bg-dark-50;
            border: none
        }

        &::-webkit-scrollbar-thumb {
            @apply bg-dark-300 rounded;
            border: 2px solid transparent;
            background-clip: content-box;
            left: 2px;
            right: 2px;
        }
        &:hover {
            &::-webkit-scrollbar-thumb {
                @apply bg-dark-400;
            }
        }
    }

    .outline {
        outline-width: 1px;
        outline-style: solid;
    }

    *:focus-visible {
        outline: none;
    }

    mark {
        @apply text-dark-900 bg-notice-100;
    }

    #notification-messages {
        @apply z-1000 fixed bottom-72 left-24 right-24 mx-auto max-w-1180 mb-24 flex flex-col items-center gap-16;
        max-height: calc(100vh - 6rem);
        @screen xl {
            left: 17.75rem;
        }
    }

    #messaging-toasts {
        @apply z-1000 fixed top-0 right-0 left-0 p-24 sm:left-auto sm:w-370 flex flex-col gap-12 pointer-events-none;
        max-height: calc(100vh - 3rem);
        overflow-y: auto;

        > * {
            @apply pointer-events-auto;
        }
    }
}

